Added help modal, legend toggle, tooltips

--- a/index.html
+++ b/index.html
@@ -64,16 +64,14 @@
   </div>
 </div>
 
-    <div class="controls">
-      <!-- Submit Button -->
-      <button id="submit-btn" disabled data-tooltip="Submit your guess (Enter key also works)">✅ Submit</button>
-      
-      <!-- Hint Button -->
-      <button id="hint-btn" data-tooltip="Watch a short ad to reveal a letter">💡 Hint (Watch Ad)</button>
-      
-      <!-- Share Button -->
-      <button id="share-btn" data-tooltip="Copy your result to share with friends!">📤 Share Result</button>
-    </div>
+
+<div class="controls">
+  <!-- Hint Button -->
+  <button id="hint-btn" data-tooltip="Watch a short ad to reveal a letter">💡 Hint (Watch Ad)</button>
+  
+  <!-- Share Button -->
+  <button id="share-btn" data-tooltip="Copy your result to share with friends!">📤 Share Result</button>
+</div>
 
     <p class="streak" id="streak">Streak: 0 🔥</p>
 
@@ -97,7 +95,7 @@
       <ol>
         <li>Guess the 6-letter word in 6 tries.</li>
         <li>Type letters using the on-screen keyboard.</li>
-        <li>Press <strong>Submit</strong> or tap ✅ when your word is complete.</li>
+        <li>Press <strong>ENTER</strong> on the keyboard to submit your guess.</li>
         <li>Letters will turn:</li>
         <ul>
           <li>🟦 <strong>Blue</strong> = Right letter, right position</li>
