--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <meta name="description" content="Daily 6-letter word puzzle. One word. One chance. How fast can you guess it?">
 </head>
 <body>
+<div class="ad-banner">
+  <div class="logo">B</div>
+  <div class="ad-label">Ad</div>
+  <img src="/image/banner-placeholder.png" alt="banner">
+</div>
 <div class="container">
   <div class="game-container">
     <h1>WordBytes</h1>
