--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
   <div class="ad-label">Ad</div>
 </div>
 
+<div class="ad-banner">
+  <div class="logo">B</div>
+  <div class="ad-label">Ad</div>
+</div>
+
     <h1>WordBytes</h1>
     <p class="tagline">One 6-letter word. One daily challenge.</p>
 
-    <!-- Help Button -->
-    <button id="help-btn" class="help-btn" aria-label="How to play">ℹ️</button>
 
     <div id="gameboard"></div>
 
@@ -59,7 +62,6 @@
 
       <!-- Row 3 -->
       <div class="key-row">
-        <div class="key enter" data-tooltip="Press to submit your guess">ENTER</div>
         <div class="key">Z</div>
         <div class="key">X</div>
         <div class="key">C</div>
@@ -68,6 +70,7 @@
         <div class="key">N</div>
         <div class="key">M</div>
         <div class="key backspace">⌫</div>
+        <div class="key enter" data-tooltip="Press to submit your guess">ENTER</div>
       </div>
     </div>
 
@@ -77,6 +80,9 @@
     </div>
 
     <p class="streak" id="streak">Streak: 0 🔥</p>
+
+    <!-- Help Button -->
+    <button id="help-btn" class="help-btn" aria-label="How to play">ℹ️</button>
 
     <!-- Legend (Below Controls) -->
     <div class="legend-container">
