--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <div class="container">
   <div class="game-container">
 
-<div class="ad-banner">
+
+<div class="ad-banner top-ad">
   <div class="logo">B</div>
   <div class="ad-label">Ad</div>
 </div>
@@ -24,9 +25,13 @@
   <div class="logo">B</div>
   <div class="ad-label">Ad</div>
 </div>
+
 
     <h1>WordBytes</h1>
     <p class="tagline">One 6-letter word. One daily challenge.</p>
+
+    <!-- Help Button -->
+    <button id="help-btn" class="help-btn" aria-label="How to play">ℹ️</button>
 
 
     <div id="gameboard"></div>
@@ -80,9 +85,6 @@
     </div>
 
     <p class="streak" id="streak">Streak: 0 🔥</p>
-
-    <!-- Help Button -->
-    <button id="help-btn" class="help-btn" aria-label="How to play">ℹ️</button>
 
     <!-- Legend (Below Controls) -->
     <div class="legend-container">
