--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <h1>WordBytes</h1>
     <p class="tagline">One 6-letter word. One daily challenge.</p>
 
-    <!-- Help Button -->
-    <button id="help-btn" class="help-btn" aria-label="How to play">ℹ️</button>
-
+<div class="top-controls">
+  <button id="dark-mode-toggle" class="theme-btn" aria-label="Toggle dark mode">🌙</button>
+  <button id="help-btn" class="help-btn" aria-label="How to play">ℹ️</button>
+  <button id="mute-btn" class="mute-btn" aria-label="Mute sound">🔊</button>
+</div>
 
     <div id="gameboard"></div>
 
