Updated all links to use wordbytes.app

--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
   <link rel="icon" type="image/png" href="icon-192.png" />
   <meta name="theme-color" content="#2d7dff" />
   <meta name="description" content="Daily 6-letter word puzzle. One word. One chance. How fast can you guess it?">
+  <meta property="og:title" content="WordBytes">
+  <meta property="og:description" content="Guess the daily 6-letter word. One try per day.">
+  <meta property="og:url" content="https://wordbytes.app">
+  <meta property="og:image" content="https://wordbytes.app/social-preview.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@yourhandle">
 </head>
 <body>
+
+<!-- Splash Screen -->
+<div id="splash-screen" class="splash">
+  <div class="splash-content">
+    <h1>WordBytes</h1>
+    <p>One 6-letter word. One daily challenge.</p>
+  </div>
+</div>
 
 <div class="container">
   <div class="game-container">
