Added Propeller Ads rewarded video for hint button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta property="og:image" content="https://wordbytes.app/social-preview.jpg">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@yourhandle">
+  <!-- Propeller Ads Rewarded Video -->
+<script src="https://aiharsoreersu.net/act/files/tag.min.js?z=9775971" data-cfasync="false" async></script>
 </head>
 <body>
 
