--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>WordBytes</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="manifest" href="manifest.json" />
-  <link rel="icon" type="image/png" href="image/icon-192.png" />
+  <link rel="icon" type="image/png" href="icon-192.png" />
   <meta name="theme-color" content="#2d7dff" />
   <meta name="description" content="Daily 6-letter word puzzle. One word. One chance. How fast can you guess it?">
   <meta property="og:title" content="WordBytes">
