Fixed Propeller Ads: now uses official CDN and init()

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@yourhandle">
   <!-- Propeller Ads Rewarded Video -->
-<script src="https://aiharsoreersu.net/act/files/tag.min.js?z=9775971" data-cfasync="false" async></script>
+  <script src="https://cdn.proplayerads.com/pa-v3.min.js" async></script>
 </head>
 <body>
 
