Fixed PropellerAds: now uses direct S3 CDN and tests banner ads

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@yourhandle">
   <!-- Propeller Ads Rewarded Video -->
-  <script src="https://cdn.proplayerads.com/pa-v3.min.js" async>
+<script src="https://s3.amazonaws.com/proplayerads/pa-v3.min.js" async>
   window.PropellerAds = window.PropellerAds || {};
   window.PropellerAds.onReady = function() {
     console.log("PropellerAds ready!");
@@ -37,8 +37,8 @@
 <div class="container">
   <div class="game-container">
 
-
-<div class="ad-banner top-ad">
+<!-- Top Banner Ad -->
+<div id="ad-banner-top" class="ad-banner">
   <div class="logo">B</div>
   <div class="ad-label">Ad</div>
 </div>
