--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@yourhandle">
   <!-- Propeller Ads Rewarded Video -->
-<script src="https://s3.amazonaws.com/proplayerads/pa-v3.min.js" async>
+<script src="https://grookilteepsou.net/act/files/tag.min.js?z=9775971" data-cfasync="false" async>
   window.PropellerAds = window.PropellerAds || {};
   window.PropellerAds.onReady = function() {
     console.log("PropellerAds ready!");
