Removed rewarded ads, added banner ad test

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
   <div class="container">
     <div class="game-container">
 
-      <!-- Top Ad Banner -->
-      <div id="ad-banner-top" class="ad-banner">
-        <div class="logo">B</div>
-        <div class="ad-label">Ad</div>
-      </div>
 
+<!-- Top Ad Banner -->
+<div id="ad-banner-top" class="ad-banner">
+  <div class="ad-label">Loading Ad...</div>
+</div>
       <h1>WordBytes</h1>
       <p class="tagline">One 6-letter word. One daily challenge.</p>
 
