--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:site" content="@yourhandle">
 
   <!-- ✅ Official PropellerAds Script -->
-  <script async src="https://cdn.proplayerads.com/pa-v3.min.js"></script>
+    <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('gizokraijaw.net',9776143,document.createElement('script'))</script>
 </head>
 <body>
 
