--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- ✅ Official PropellerAds Script -->
     <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('gizokraijaw.net',9776143,document.createElement('script'))</script>
 <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('groleegni.net',9776133,document.createElement('script'))</script>
+<script src="https://upskittyan.com/act/files/tag.min.js?z=9776139" data-cfasync="false" async></script>
 </head>
 <body>
 
