--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 <div id="ad-banner-top" class="ad-banner">
   <div class="ad-label">Loading Ad...</div>
 </div>
+<div id="ad-banner-top" class="ad-banner">
+  <div class="ad-label">Loading Ad...</div>
+</div>
+
       <h1>WordBytes</h1>
       <p class="tagline">One 6-letter word. One daily challenge.</p>
 
