--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
   <!-- ✅ Official PropellerAds Script -->
  <script src="https://shoukigaigoors.net/act/files/tag.min.js?z=9776139" data-cfasync="false" async></script>
-<script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9776602,document.createElement('script'))</script>
-</head>
+    <script>(function(d,z,s){s.src='https://'+d+'/400/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('vemtoutcheeg.com',9776602,document.createElement('script'))</script></head>
 <body>
 
   <!-- Splash Screen -->
