--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 
 <!-- Top Ad Banner -->
 <div id="ad-banner-top" class="ad-banner">
-  <div class="ad-label">Loading Ad...</div>
+  <div class="ad-label">
+    <img src="/image/Wordbyte Banner.jpg" alt="One 6-letter word. One daily challenge.">
+  </div>
 </div>
 <div id="ad-banner-top" class="ad-banner">
   <div class="ad-label">Loading Ad...</div>
