--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- Top Ad Banner -->
 <div id="ad-banner-top" class="ad-banner">
   <div class="ad-label">
-    <img src="./image/wordbyte-banner.jpg" alt="One 6-letter word. One daily challenge.">
+    <img src="./image/WordbyteBanner.jpg" alt="One 6-letter word. One daily challenge.">
   </div>
 </div>
 
