--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
   </div>
 </div>
 
-<div id="header"></div>
-
-
-      <h1>WordBytes</h1>
+      <div id="header">
+        <h1>WordBytes</h1>
+      </div>
       <p class="tagline">One 6-letter word. One daily challenge.</p>
 
       <div class="top-controls">
