--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
 
   gtag('config', 'G-WV3W17YEFJ');
 </script>
-
+<!-- Google tag (gtag.js) for testing -->
+<script>
+  gtag('config', 'G-XXXXXXXXXX', {
+    'debug_mode': true
+  });
+</script>
 </head>
 <body>
 
