--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </script>
 <!-- Google tag (gtag.js) for testing -->
 <script>
-  gtag('config', 'G-XXXXXXXXXX', {
+  gtag('config', 'G-WV3W17YEFJ', {
     'debug_mode': true
   });
 </script>
