--- a/index.html
+++ b/index.html
@@ -160,12 +160,26 @@
     <h3>Share Your Result</h3>
     <p>Challenge your friends!</p>
     <div id="social-buttons" style="margin: 15px 0;">
-      <button onclick="shareOnX()" style="background: #1DA1F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">🐦 X (Twitter)</button>
-      <button onclick="shareOnFacebook()" style="background: #1877F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📘 Facebook</button>
-      <button onclick="shareOnLinkedIn()" style="background: #0077b5; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">💼 LinkedIn</button>
-      <button onclick="copyToClipboard()" style="background: #6c757d; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📋 Copy Link</button>
+      <!-- X (Twitter) -->
+      <button onclick="shareOnX()" style="background: #1DA1F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
+        🐦 Share on X
+      </button>
+      <!-- Facebook -->
+      <button onclick="shareOnFacebook()" style="background: #1877F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
+        📘 Share on Facebook
+      </button>
+      <!-- LinkedIn -->
+      <button onclick="shareOnLinkedIn()" style="background: #0077b5; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
+        💼 Share on LinkedIn
+      </button>
+      <!-- Copy to Clipboard (your original fallback) -->
+      <button onclick="copyToClipboard()" style="background: #28a745; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
+        📋 Copy Result
+      </button>
     </div>
-    <button onclick="closeShareModal()" style="background: #dc3545; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer;">Close</button>
+    <button onclick="closeShareModal()" style="background: #6c757d; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 14px;">
+      Close
+    </button>
   </div>
 </div>
 
