--- a/index.html
+++ b/index.html
@@ -155,31 +155,18 @@
 
 
 <!-- SHARE MODAL -->
+<!-- SHARE MODAL -->
 <div id="share-modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 1000; justify-content: center; align-items: center;">
   <div style="background: white; padding: 20px; border-radius: 12px; width: 90%; max-width: 500px; text-align: center; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
     <h3>Share Your Result</h3>
     <p>Challenge your friends!</p>
     <div id="social-buttons" style="margin: 15px 0;">
-      <!-- X (Twitter) -->
-      <button onclick="shareOnX()" style="background: #1DA1F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
-        🐦 Share on X
-      </button>
-      <!-- Facebook -->
-      <button onclick="shareOnFacebook()" style="background: #1877F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
-        📘 Share on Facebook
-      </button>
-      <!-- LinkedIn -->
-      <button onclick="shareOnLinkedIn()" style="background: #0077b5; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
-        💼 Share on LinkedIn
-      </button>
-      <!-- Copy to Clipboard (your original fallback) -->
-      <button onclick="copyToClipboard()" style="background: #28a745; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer; font-size: 14px;">
-        📋 Copy Result
-      </button>
+      <button onclick="shareOnX()" style="background: #1DA1F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">🐦 Share on X</button>
+      <button onclick="shareOnFacebook()" style="background: #1877F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📘 Share on Facebook</button>
+      <button onclick="shareOnLinkedIn()" style="background: #0077b5; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">💼 Share on LinkedIn</button>
+      <button onclick="copyToClipboard()" style="background: #28a745; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📋 Copy Result</button>
     </div>
-    <button onclick="closeShareModal()" style="background: #6c757d; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer; font-size: 14px;">
-      Close
-    </button>
+    <button onclick="closeShareModal()" style="background: #6c757d; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer;">Close</button>
   </div>
 </div>
 
