--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       <button onclick="shareOnFacebook()" style="background: #1877F2; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📘 Facebook</button>
       <button onclick="shareOnTelegram()" style="background: #0088cc; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📱 Telegram</button>
       <button onclick="shareOnWhatsApp()" style="background: #25D366; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">💬 WhatsApp</button>
+      <button onclick="shareOnLinkedIn()" style="background: #0077b5; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">💼 LinkedIn</button>
       <button onclick="copyToClipboard()" style="background: #28a745; color: white; border: none; padding: 10px 15px; margin: 5px; border-radius: 6px; cursor: pointer;">📋 Copy</button>
     </div>
-    <button onclick="closeShareModal()" style="background: #6c757d; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer;">Close</button>
-  </div>
+    <button onclick="closeShareModal()" style="background: #6c757d; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer;">Close</button>  </div>
 </div>
