--- a/index.html
+++ b/index.html
@@ -174,3 +174,5 @@
     </div>
     <button onclick="closeShareModal()" style="background: #6c757d; color: white; border: none; padding: 8px 16px; border-radius: 6px; cursor: pointer;">Close</button>  </div>
 </div>
+
+</body>
